--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.huiges.AndroBlip"
 
     android:versionCode="402"
-    android:versionName="4.0.2 Beta1 Open " >
+    android:versionName="4.0 Beta 2" >
 
     <uses-sdk
         android:minSdkVersion="13"
