--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.huiges.AndroBlip"
 
-    android:versionCode="403"
-    android:versionName="4.0 Beta 3" >
+    android:versionCode="404"
+    android:versionName="4.0 Beta 3 bugfix 1" >
 
     <uses-sdk
         android:minSdkVersion="13"
